# SoDaOps

./: .coverage  .gitignore  LICENSE  README.md  alert_test.py  cloudbuild.yaml  cloudbuild_build_api.yaml  cloudbuild_build_deploy_api.yaml  cloudbuild_ci.yaml  cloudbuild_ci_cd.yaml  cloudbuild_drift.yaml  cloudbuild_vertex.yaml  coverage.xml  data.dvc  entrypoint.sh  pyproject.toml  report.html  requirements.in  requirements.txt  requirements_dev.txt  tasks.py
.dvc/: config  dockerconfig
.github/workflows/: codecheck.yaml  coverage.yaml  tests.yaml
configs/: sweep.yaml  vertex_config_placeholder.yaml  vertex_config_secret.yaml
data/raw/: test.csv  val.csv
dockerfiles/: api.dockerfile  drift.dockerfile  main.dockerfile  train.dockerfile
docs/: mkdocs.yaml
docs/source/: index.md
reports/: README.md  monitoring.html  report.html
so_da_ops/: pyproject.toml  tasks.py
so_da_ops/dockerfiles/: api.dockerfile
src/tweet_sentiment_analysis/: api.py  data.py  drift_report.py  evaluate.py  fetch_and_upload_model.py  inference_single.py  model.py  train.py  utils.py  visualize.py
src/tweet_sentiment_analysis/api/: api.dockerfilepy  api.py
src/tweet_sentiment_anlaysis/: data.py  evaluate.py  visualize.py
tests/: __init__.py  no_pywin.py  test_api.py  test_data.py  test_evaluate.py  test_model.py  test_train.py
