[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "tweet_sentiment_anlaysis"
version = "0.0.1"
description = "This is the course project for the 2025 MLOps course at DTU of Marten, Magnus and Johanna."
authors = [
  { name = "SoDaOps", email = "your@email.com" },
]
license = { file = "LICENSE" }
keywords = ["machine learning", "MLOps"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
]
readme = "README.md"
requires-python = ">=3.10"
dynamic = ["dependencies", "optional-dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.dynamic.optional-dependencies]
dev = {file = ['requirements_dev.txt']}

[tool.ruff]
line-length = 120
lint.select = ["I"]

[tool.coverage.run]
omit = ["tests/*"]
